 + Client menus
 * Dynamically-loaded driver system
 + LCDproc Developer's Guide

v0.4.4
 + Added option in curses to use our own ascii map
 * Fixed the bignum/backstore and flickering in CFontz
 + Added CFontz633 backported from CVS 0.5
 * recovered some old code of the curses driver (See LCDd.conf)
 * Finished the LCDM001 driver
 * Fixed a memory leak in do_mainloop

v0.4.3
 - Removed possibility of passing arguments to the drivers from the
   command line, which can be done in the configuration file now
 + Added configuration file support
 + Added ability of dropping root privileges to LCDd
 + Added LCDM001 driver (kernelconcepts.de)
 + Added Toshiba T6963 driver
 * Modified the CFontz driver so that the new ROM version is
   supported
 + Added ASCII emulation of BigNum to the drivers that did not
   support custom characters
 + Added ability of configuring (rearranging) the keypad of MtxOrb
   displays
 + Added .lircrc location to the options of the lirc driver
 * Fixed backlight code (partly rewritten)
 * Fixed heartbeat code (completely rewritten analogous to
   the backlight code)
 + Added init scripts for debian and Redhat/Mandrake
 + Added EPM list file so that you can use EPM
   (http://www.easysw.com/epm) to generate packages of LCDproc
 + Added documentation in docbook format
   (LCDproc User's Guide - docs/lcdproc-user)
 * Ported some screens of lcdproc to *BSD.
 * Ported the parallel port functions in port.h to *BSD.

v0.4.2:
 - Removed multiple output driver support - to simplify life
 * Removed use of sprintf() (in favor of snprintf) for security
 + Added ability to use defined port and address to listen on
   (for security) - now defaults to 127.0.0.1
 + Revamped curses driver: now supports color; has border; and
   can be (with recompile) placed anywhere on screen it fits
 + Added --waittime server argument.  You can now specify how long
   a screen should stay on the display.  The default is 64 ticks or
   8 seconds.