@@ -37,6 +37,7 @@
 #include <errno.h>
 #include <syslog.h>
 #include <ctype.h>
+#include <sys/poll.h>
 
 #ifdef HAVE_CONFIG_H
 # include "config.h"
@@ -342,7 +343,7 @@ MtxOrb_init (lcd_logical_driver * driver, char *args)
 	}
 
 	/* Set up io port correctly, and open it... */
-	fd = open (device, O_RDWR | O_NOCTTY | O_NDELAY);
+	fd = open (device, O_RDWR | O_NOCTTY);
 	if (fd == -1) {
 		switch (errno) {
 			case ENOENT:
@@ -360,8 +361,9 @@ MtxOrb_init (lcd_logical_driver * driver, char *args)
 
 	tcgetattr (fd, &portset);
 
+	// THIS ALL COMMENTED OUT BECAUSE WE NEED TO SET TIMEOUTS
 	// We use RAW mode
-#ifdef HAVE_CFMAKERAW
+#ifdef HAVE_CFMAKERAW_NOT
 	// The easy way
 	cfmakeraw( &portset );
 #else
@@ -372,6 +374,8 @@ MtxOrb_init (lcd_logical_driver * driver, char *args)
 	portset.c_lflag &= ~( ECHO | ECHONL | ICANON | ISIG | IEXTEN );
 	portset.c_cflag &= ~( CSIZE | PARENB | CRTSCTS );
 	portset.c_cflag |= CS8 | CREAD | CLOCAL ;
+	portset.c_cc[VMIN] = 1;
+	portset.c_cc[VTIME] = 3;
 #endif
 
 	// Set port speed
@@ -1136,7 +1140,16 @@ MtxOrb_getkey ()
 {
 	char in = 0;
 
+	// POLL For data or return
+	struct pollfd fds[1];
+	fds[0].fd = fd;
+	fds[0].events = POLLIN;
+	fds[0].revents = 0;
+	poll (fds,1,0);
+	if (fds[0].revents == 0) { return in; }
+
 	read (fd, &in, 1);
+	report(RPT_INFO, "MtxOrb: getkey: key X %i", in);
 
 	if (in!=0) {
 		if (!keypad_test_mode) {
